--- a/index.html
+++ b/index.html
@@ -16886,7 +16886,7 @@ var $author$project$Main$body = function (model) {
 var $author$project$Main$view = function (model) {
 	return {
 		bO: $author$project$Main$body(model),
-		ck: 'libportalnet'
+		ck: 'EPORTALD'
 	};
 };
 var $author$project$Main$main = $elm$browser$Browser$document(
